UX: spacing fix for related topics on mobile (#27940)

--- a/app/assets/stylesheets/desktop/components/more-topics.scss
+++ b/app/assets/stylesheets/desktop/components/more-topics.scss
@@ -1,7 +1,6 @@
 .more-topics__container {
   .nav {
     position: absolute;
-    top: 2px;
     li {
       margin-right: 0;
       .btn {
